[Java] Clean up build warnings on Java 11.